--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -26,7 +26,7 @@
           </li>
           <li class="flex items-center">
             <a
-              class="bg-blue-500 hover:bg-blue-700 text-white text-xs px-1 py-0.5 rounded"
+              class="text-white text-xs px-1 py-0.5 rounded"
               id="redirectUpdateUserDetails"
               href="./update-user-details"
             >
@@ -151,16 +151,16 @@
           </div>
         </div>
         <!-- LOWER PROFILE BUTTONS -->
-        <div class="flex justify-center items-center w-full px-2 pb-2">
+        <div class="flex justify-center items-center w-full px-2 pb-1">
           <a
-            class="profile-button bg-slate-500 hover:bg-slate-700 w-40 px-5 mr-2"
+            class="profile-button bg-slate-500 hover:bg-slate-700 mr-2"
             id="redirectUpdateUserDetails"
             href="/update-profile"
           >
             Edit Profile
           </a>
           <a
-            class="profile-button bg-slate-500 hover:bg-slate-700 w-40 px-5 ml-2"
+            class="profile-button bg-slate-500 hover:bg-slate-700 ml-2"
             id="redirectShareProfile"
             href="#"
           >
