--- a/src/main/resources/static/css/input.css
+++ b/src/main/resources/static/css/input.css
@@ -134,6 +134,21 @@
     background-color: #fff !important;
     color: #111827 !important;
   }
+
+  textarea {
+    border: 1px solid #d1d5db !important;
+    border-radius: 0.375rem !important;
+    width: 100% !important;
+    padding: 0.5rem !important;
+    box-sizing: border-box !important;
+    background-color: #fff !important;
+    color: #111827 !important;
+  }
+
+  label {
+    font-size: 0.875rem; /* Equivalent to text-sm */
+    color: #374151; /* Equivalent to text-slate-700 */
+  }
 }
 
 @layer components {
@@ -268,10 +283,38 @@
     color: #fff;
     font-size: 0.875rem;
     font-weight: 300;
-    margin-left: 0.25rem;
-    margin-right: 0.25rem;
-    margin-bottom: 0.25rem;
-    border-radius: 0.375rem !important;
+    width: 10rem; /* Equivalent to w-40 */
+    border-radius: 0.375rem !important; /* Equivalent to rounded */
+    padding-left: 0.25rem; /* Equivalent to px-5 */
+    padding-right: 0.25rem; /* Equivalent to px-5 */
+  }
+
+  .small-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    font-size: 0.875rem;
+    font-weight: 300;
+    width: 5rem; /* Equivalent to w-40 */
+    border-radius: 0.375rem !important; /* Equivalent to rounded */
+    padding-left: 0.25rem; /* Equivalent to px-5 */
+    padding-right: 0.25rem; /* Equivalent to px-5 */
+  }
+
+  .button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    font-size: 0.875rem;
+    font-weight: 500;
+    width: 10rem; /* Equivalent to w-40 */
+    border-radius: 0.375rem !important; /* Equivalent to rounded */
+    padding-top: 0.25rem; /* Equivalent to pt-1 */
+    padding-bottom: 0.25rem; /* Equivalent to pb-1 */
+    padding-left: 0.25rem; /* Equivalent to px-5 */
+    padding-right: 0.25rem; /* Equivalent to px-5 */
   }
 
 }
