--- a/src/main/resources/static/css/output.css
+++ b/src/main/resources/static/css/output.css
@@ -883,6 +883,23 @@ input {
   color: #111827 !important;
 }
 
+textarea {
+  border: 1px solid #d1d5db !important;
+  border-radius: 0.375rem !important;
+  width: 100% !important;
+  padding: 0.5rem !important;
+  box-sizing: border-box !important;
+  background-color: #fff !important;
+  color: #111827 !important;
+}
+
+label {
+  font-size: 0.875rem;
+  /* Equivalent to text-sm */
+  color: #374151;
+  /* Equivalent to text-slate-700 */
+}
+
 .container {
   width: 100%;
 }
@@ -1063,10 +1080,73 @@ input {
   color: #fff;
   font-size: 0.875rem;
   font-weight: 300;
-  margin-left: 0.25rem;
-  margin-right: 0.25rem;
-  margin-bottom: 0.25rem;
+  width: 10rem;
+  /* Equivalent to w-40 */
   border-radius: 0.375rem !important;
+  /* Equivalent to rounded */
+  padding-left: 0.25rem;
+  /* Equivalent to px-5 */
+  padding-right: 0.25rem;
+  /* Equivalent to px-5 */
+}
+
+.small-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  font-size: 0.875rem;
+  font-weight: 300;
+  width: 5rem;
+  /* Equivalent to w-40 */
+  border-radius: 0.375rem !important;
+  /* Equivalent to rounded */
+  padding-left: 0.25rem;
+  /* Equivalent to px-5 */
+  padding-right: 0.25rem;
+  /* Equivalent to px-5 */
+}
+
+.\!button {
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  color: #fff !important;
+  font-size: 0.875rem !important;
+  font-weight: 500 !important;
+  width: 10rem !important;
+  /* Equivalent to w-40 */
+  border-radius: 0.375rem !important;
+  /* Equivalent to rounded */
+  padding-top: 0.25rem !important;
+  /* Equivalent to pt-1 */
+  padding-bottom: 0.25rem !important;
+  /* Equivalent to pb-1 */
+  padding-left: 0.25rem !important;
+  /* Equivalent to px-5 */
+  padding-right: 0.25rem !important;
+  /* Equivalent to px-5 */
+}
+
+.button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  font-size: 0.875rem;
+  font-weight: 500;
+  width: 10rem;
+  /* Equivalent to w-40 */
+  border-radius: 0.375rem !important;
+  /* Equivalent to rounded */
+  padding-top: 0.25rem;
+  /* Equivalent to pt-1 */
+  padding-bottom: 0.25rem;
+  /* Equivalent to pb-1 */
+  padding-left: 0.25rem;
+  /* Equivalent to px-5 */
+  padding-right: 0.25rem;
+  /* Equivalent to px-5 */
 }
 
 .visible {
@@ -1109,6 +1189,10 @@ input {
   right: 0.5rem;
 }
 
+.top-0 {
+  top: 0px;
+}
+
 .z-20 {
   z-index: 20;
 }
@@ -1129,10 +1213,6 @@ input {
   margin: 0.25rem;
 }
 
-.m-3 {
-  margin: 0.75rem;
-}
-
 .mx-2 {
   margin-left: 0.5rem;
   margin-right: 0.5rem;
@@ -1147,20 +1227,32 @@ input {
   margin-bottom: 0.25rem;
 }
 
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
 .ml-2 {
   margin-left: 0.5rem;
+}
+
+.mr-2 {
+  margin-right: 0.5rem;
 }
 
 .mt-2 {
   margin-top: 0.5rem;
 }
 
-.mt-8 {
-  margin-top: 2rem;
+.mt-4 {
+  margin-top: 1rem;
 }
 
-.mr-2 {
-  margin-right: 0.5rem;
+.mt-8 {
+  margin-top: 2rem;
 }
 
 .block {
@@ -1232,10 +1324,6 @@ input {
   min-height: fit-content;
 }
 
-.w-1\/3 {
-  width: 33.333333%;
-}
-
 .w-10 {
   width: 2.5rem;
 }
@@ -1252,24 +1340,16 @@ input {
   width: 1rem;
 }
 
+.w-40 {
+  width: 10rem;
+}
+
 .w-7 {
   width: 1.75rem;
 }
 
 .w-full {
   width: 100%;
-}
-
-.w-40 {
-  width: 10rem;
-}
-
-.w-20 {
-  width: 5rem;
-}
-
-.w-24 {
-  width: 6rem;
 }
 
 .flex-shrink {
@@ -1336,10 +1416,6 @@ input {
   justify-content: space-between;
 }
 
-.gap-2 {
-  gap: 0.5rem;
-}
-
 .gap-4 {
   gap: 1rem;
 }
@@ -1376,6 +1452,10 @@ input {
   border-radius: 9999px;
 }
 
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
 .rounded-md {
   border-radius: 0.375rem;
 }
@@ -1393,12 +1473,12 @@ input {
   border-bottom-width: 1px;
 }
 
-.border-r {
-  border-right-width: 1px;
-}
-
 .border-b-2 {
   border-bottom-width: 2px;
+}
+
+.border-r {
+  border-right-width: 1px;
 }
 
 .border-none {
@@ -1480,6 +1560,11 @@ input {
   background-color: rgb(100 116 139 / var(--tw-bg-opacity, 1));
 }
 
+.bg-slate-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 41 59 / var(--tw-bg-opacity, 1));
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
@@ -1494,16 +1579,12 @@ input {
      object-fit: cover;
 }
 
+.p-1 {
+  padding: 0.25rem;
+}
+
 .p-2 {
   padding: 0.5rem;
-}
-
-.p-4 {
-  padding: 1rem;
-}
-
-.p-32 {
-  padding: 8rem;
 }
 
 .px-1 {
@@ -1526,6 +1607,16 @@ input {
   padding-right: 1rem;
 }
 
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
 .py-0\.5 {
   padding-top: 0.125rem;
   padding-bottom: 0.125rem;
@@ -1536,9 +1627,13 @@ input {
   padding-bottom: 0.25rem;
 }
 
-.px-5 {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.pb-1 {
+  padding-bottom: 0.25rem;
 }
 
 .pb-2 {
@@ -1573,32 +1668,12 @@ input {
   padding-top: 0.75rem;
 }
 
-.pl-5 {
-  padding-left: 1.25rem;
+.pb-12 {
+  padding-bottom: 3rem;
 }
 
-.pr-5 {
-  padding-right: 1.25rem;
-}
-
-.pr-7 {
-  padding-right: 1.75rem;
-}
-
-.pl-7 {
-  padding-left: 1.75rem;
-}
-
-.pr-3 {
-  padding-right: 0.75rem;
-}
-
-.pl-3 {
-  padding-left: 0.75rem;
-}
-
-.pt-0 {
-  padding-top: 0px;
+.pb-3 {
+  padding-bottom: 0.75rem;
 }
 
 .text-center {
@@ -1704,14 +1779,14 @@ input {
   color: rgb(71 85 105 / var(--tw-text-opacity, 1));
 }
 
+.text-slate-700 {
+  --tw-text-opacity: 1;
+  color: rgb(51 65 85 / var(--tw-text-opacity, 1));
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
-}
-
-.text-blue-300 {
-  --tw-text-opacity: 1;
-  color: rgb(147 197 253 / var(--tw-text-opacity, 1));
 }
 
 .shadow-md {
@@ -1831,6 +1906,11 @@ input {
   background-color: rgb(30 64 175 / var(--tw-bg-opacity, 1));
 }
 
+.hover\:bg-blue-950:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(23 37 84 / var(--tw-bg-opacity, 1));
+}
+
 .hover\:bg-red-800:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(153 27 27 / var(--tw-bg-opacity, 1));
@@ -1846,9 +1926,9 @@ input {
   background-color: rgb(51 65 85 / var(--tw-bg-opacity, 1));
 }
 
-.\*\:hover\:bg-slate-700:hover > * {
+.hover\:bg-slate-950:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(51 65 85 / var(--tw-bg-opacity, 1));
+  background-color: rgb(2 6 23 / var(--tw-bg-opacity, 1));
 }
 
 .focus\:border-red-500:focus {
