--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -4,114 +4,125 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign Up</title>
     <link rel="stylesheet" href="/css/output.css" />
-    <script src="/js/visitedPages.js" defer></script>
     <script th:src="@{/js/fadeAnimations.js}" defer></script>
-
   </head>
   <body>
-    <header>
-      <nav class="navbar">
-        <ul class="flex justify-center items-center w-full">
-          <li>
-            <a href="/index">
-              <img class="h-5" src="/images/Shelved_Logo_White.png" alt="Shelved Logo" />
+    <main class="top-0 bottom-0 bg-blue-500">
+      <div class="flex flex-col items-center justify-center h-screen mb-4">
+        <div
+          class="flex flex-col items-center justify-center px-6 py-4 rounded-lg"
+        >
+          <div class="mb-4 mt-2">
+            <img
+              class="h-8"
+              src="/images/Shelved_Logo_White.png"
+              alt="Shelved Logo"
+            />
+          </div>
+
+          <div class="errorBox">
+            <!-- SUCCESS MESSAGE -->
+            <div
+              id="successMessageDiv"
+              th:if="${message}"
+              th:text="${message}"
+              class="success"
+            ></div>
+            <!-- ERROR MESSAGE -->
+            <div
+              id="errorMessageDiv"
+              th:if="${error}"
+              th:text="${error}"
+              class="failure"
+            ></div>
+          </div>
+
+          <form th:action="@{/signup}" method="post">
+            <input type="hidden" name="_csrf" value="${_csrf.token}" />
+
+            <div class="mt-2 mb-2">
+              <label class="label" for="username">Username:</label>
+              <input
+                type="text"
+                id="username"
+                name="username"
+                placeholder="Username"
+                required
+              />
+            </div>
+            <div class="mb-2">
+              <label class="label" for="email">Email:</label>
+              <input
+                type="email"
+                id="email"
+                name="email"
+                placeholder="Email"
+                required
+              />
+            </div>
+            <div class="mb-2">
+              <label class="label" for="firstName">First Name:</label>
+              <input
+                type="text"
+                id="firstName"
+                name="firstName"
+                placeholder="First Name"
+              />
+            </div>
+            <div class="mb-2">
+              <label class="label" for="lastName">Last Name:</label>
+              <input
+                type="text"
+                id="lastName"
+                name="lastName"
+                placeholder="Last Name"
+              />
+            </div>
+            <div class="mb-2">
+              <label class="label" for="password">Password:</label>
+              <input
+                type="password"
+                id="password"
+                name="password"
+                placeholder="Password"
+                required
+              />
+            </div>
+            <div class="mb-2">
+              <label class="label" for="confirmPassword">
+                Confirm Password:
+              </label>
+              <input
+                type="password"
+                id="confirmPassword"
+                name="confirmPassword"
+                placeholder="Confirm Password"
+                required
+              />
+
+            <!-- Submit Button -->
+            <div class="flex justify-center items-center w-full p-1 mt-4">
+              <button
+                class="button bg-slate-800 hover:bg-slate-950"
+                type="submit"
+              >
+                Sign Up
+              </button>
+            </div>
+          </form>
+          
+          <div class="flex justify-center items-center p-1">
+            <a
+              class="small-button bg-blue-600 hover:bg-blue-950"
+              href="/login"
+            >
+              Login
             </a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-    <main class="bg-slate-200">
-      <div class="card">
-        <div class="headerBox">
-          <h1 class="formHeader">Sign Up</h1>
+          </div>
         </div>
-
-        <div class="errorBox">
-          <!-- SUCCESS MESSAGE -->
-          <div id="successMessageDiv" th:if="${message}" th:text="${message}" class="success"></div>
-          <!-- ERROR MESSAGE -->
-          <div id="errorMessageDiv" th:if="${error}" th:text="${error}" class="failure"></div>
-        </div>
-
-        <form class="formContainer" th:action="@{/signup}" method="post">
-          <input type="hidden" name="_csrf" value="${_csrf.token}" />
-          <div class="labelInputBox">
-          <label class="label" for="username">Username:</label>
-          <input
-            class="input"
-            type="text"
-            id="username"
-            name="username"
-            placeholder="Username"
-            required
-          />
-          </div>
-
-          <div class="labelInputBox">
-          <label class="label" for="email">Email:</label>
-          <input
-            class="input"
-            type="email"
-            id="email"
-            name="email"
-            placeholder="Email"
-            required
-          />
-          </div>
-
-          <div class="labelInputBox">
-          <label class="label" for="firstName">First Name:</label>
-          <input
-            class="input"
-            type="text"
-            id="firstName"
-            name="firstName"
-            placeholder="First Name"
-          />
-          </div>
-
-          <div class="labelInputBox">
-          <label class="label" for="lastName">Last Name:</label>
-          <input
-            class="input"
-            type="text"
-            id="lastName"
-            name="lastName"
-            placeholder="Last Name"
-          />
-          </div>
-
-          <div class="labelInputBox">
-          <label class="label" for="password">Password:</label>
-          <input
-            class="input"
-            type="password"
-            id="password"
-            name="password"
-            placeholder="Password"
-            required
-          />
-          </div>
-
-          <div class="labelInputBox">
-          <label class="label" for="confirmPassword">Confirm Password:</label>
-          <input
-            class="input"
-            type="password"
-            id="confirmPassword"
-            name="confirmPassword"
-            placeholder="Confirm Password"
-            required
-          />
-          </div>
-
-          <button class="button" type="submit">Sign Up</button>
-          <a class="link" href="/login">Login</a>
-        </form>
-
       </div>
     </main>
-    <footer class="bg-slate-100">
-    </footer>
   </body>
 </html>
+
+
